--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "currency-formatter": "^1.3.1",
     "debug": "~2.2.0",
     "edge": "^6.5.1",
+    "express-https-redirect": "^1.0.0",
     "ejs": "~2.4.1",
     "ejs-mate": "^2.3.0",
     "express": "~4.13.4",
