--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "currency-formatter": "^1.3.1",
     "debug": "~2.2.0",
     "edge": "^6.5.1",
-    "express-https-redirect": "^1.0.0",
     "ejs": "~2.4.1",
     "ejs-mate": "^2.3.0",
     "express": "~4.13.4",
+    "express-https-redirect": "^1.0.0",
     "formidable": "^1.2.1",
     "gulp": "^3.9.1",
     "image-optim": "^3.0.0",
@@ -32,6 +32,9 @@
     "moment": "^2.19.1",
     "morgan": "~1.7.0",
     "redis": "^2.8.0",
+    "redis-redisearch": "^1.0.1",
+    "redis-search": "0.0.1",
+    "redisearchclient": "^1.0.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^2.0.4"
   },
