--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redis-redisearch": "^1.0.1",
     "redis-search": "0.0.1",
     "redisearchclient": "^1.0.1",
+    "redredisearch": "0.0.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^2.0.4"
   },
