--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "currency-formatter": "^1.3.1",
     "debug": "~2.2.0",
     "edge": "^6.5.1",
+    "edgejs": "0.0.0",
     "ejs": "~2.4.1",
     "ejs-mate": "^2.3.0",
     "express": "~4.13.4",
@@ -35,8 +36,8 @@
     "redis": "^2.8.0",
     "redis-redisearch": "^1.0.1",
     "redis-search": "0.0.1",
-    "redredisearch": "0.0.1",
     "redisearchclient": "^1.0.1",
+    "redredisearch": "0.0.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^2.0.4"
   },
