--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "tropicalcore",
   "version": "0.0.0",
   "private": true,
+  "main":"./bin/www",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.ejs, **/*.js,**/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify"
+
   },
   "engines": {
     "node": "6.10.0"
