--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "tropicalcore",
   "version": "0.0.0",
   "private": true,
-  "main":"./bin/www",
+  "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.ejs, **/*.js,**/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify"
-
   },
-  
   "dependencies": {
     "@google/maps": "^0.4.6",
     "bcrypt": "^3.0.6",
@@ -18,6 +16,7 @@
     "compass": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "crypto-js": "^3.1.9-1",
+    "csvtojson": "^2.0.10",
     "currency-formatter": "^1.3.1",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
