--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/maps": "^0.4.6",
+    "aws-sdk": "^2.528.0",
     "bcrypt": "^3.0.6",
     "body-parser": "~1.15.1",
     "client-sessions": "^0.8.0",
@@ -19,6 +20,7 @@
     "csvtojson": "^2.0.10",
     "currency-formatter": "^1.3.1",
     "debug": "~2.2.0",
+    "easy-livereload": "^1.3.2",
     "ejs": "~2.4.1",
     "ejs-mate": "^2.3.0",
     "express": "~4.13.4",
@@ -33,13 +35,16 @@
     "lodash": "^4.17.11",
     "moment": "^2.19.1",
     "morgan": "~1.7.0",
+    "mv": "^2.1.1",
+    "node-dev": "^4.0.0",
     "redis": "^2.8.0",
     "redis-redisearch": "^1.0.1",
     "redis-search": "0.0.1",
     "redisearchclient": "^1.0.1",
     "redredisearch": "0.0.1",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -48,6 +53,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.16.0",
+    "browser-sync": "^2.26.7",
     "connect-livereload": "^0.6.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
