--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.528.0",
     "bcrypt": "^3.0.6",
     "body-parser": "~1.15.1",
+    "bwip-js": "^1.7.3",
     "client-sessions": "^0.8.0",
     "compass": "^0.1.1",
     "cookie-parser": "~1.4.3",
@@ -37,14 +38,18 @@
     "morgan": "~1.7.0",
     "mv": "^2.1.1",
     "node-dev": "^4.0.0",
+    "pdfkit": "^0.10.0",
+    "pdfmake": "^0.1.60",
     "redis": "^2.8.0",
     "redis-redisearch": "^1.0.1",
     "redis-search": "0.0.1",
     "redisearchclient": "^1.0.1",
     "redredisearch": "0.0.1",
+    "rescode": "^0.1.10",
     "serve-favicon": "~2.3.0",
     "socket.io": "^2.0.4",
-    "uniqid": "^5.0.3"
+    "uniqid": "^5.0.3",
+    "voilab-pdf-table": "^0.5.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
