--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/maps": "^0.4.6",
+    "@sendgrid/mail": "^6.4.0",
     "aws-sdk": "^2.528.0",
     "bcrypt": "^3.0.6",
     "body-parser": "~1.15.1",
