--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@google/maps": "^0.4.6",
     "@sendgrid/mail": "^6.4.0",
     "aws-sdk": "^2.528.0",
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.7",
     "bluebird": "^3.7.1",
     "body-parser": "~1.15.1",
     "bwip-js": "^1.7.3",
@@ -23,6 +23,7 @@
     "csvtojson": "^2.0.10",
     "currency-formatter": "^1.5.5",
     "debug": "~2.2.0",
+    "dotenv": "^8.2.0",
     "easy-livereload": "^1.3.2",
     "ejs": "~2.4.1",
     "ejs-mate": "^2.3.0",
@@ -73,6 +74,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sourcemaps": "^1.12.0",
     "gulp-uglify": "^2.0.0",
-    "require-dir": "^0.3.2"
+    "require-dir": "^0.3.2",
+    "nodemon": "^2.0.2"
   }
 }
