API Routes Added

--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "morgan": "~1.7.0",
     "mv": "^2.1.1",
     "node-dev": "^4.0.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pdfkit": "^0.10.0",
     "pdfmake": "^0.1.60",
+    "phone-formatter": "0.0.2",
     "redis": "^2.8.0",
     "redis-redisearch": "^1.0.1",
     "redis-search": "0.0.1",
