--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
 REDIS_PORT=6379
-REDIS_HOST=192.241.148.235
-REDIS_PASS=Silver123.
+REDIS_HOST=167.99.148.208
+REDIS_PASS=withrevel-9-5
 PORT=3100
