--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-dev": "^4.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pdf-to-printer": "^1.1.2",
     "pdfkit": "^0.10.0",
     "pdfmake": "^0.1.63",
     "phone-formatter": "0.0.2",
