--- a/package.json
+++ b/package.json
@@ -9,37 +9,37 @@
     "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.ejs, **/*.js,**/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify"
   },
   "dependencies": {
-    "@google/maps": "^0.4.6",
+    "@google/maps": "^1.1.0",
     "@sendgrid/mail": "^6.4.0",
-    "aws-sdk": "^2.528.0",
+    "aws-sdk": "^2.610.0",
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.1",
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.19.0",
     "bwip-js": "^1.7.3",
     "client-sessions": "^0.8.0",
     "compass": "^0.1.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.4",
     "crypto-js": "^3.1.9-1",
     "csvtojson": "^2.0.10",
     "currency-formatter": "^1.5.5",
-    "debug": "~2.2.0",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "easy-livereload": "^1.3.2",
-    "ejs": "~2.4.1",
-    "ejs-mate": "^2.3.0",
-    "express": "~4.13.4",
+    "ejs": "^3.0.1",
+    "ejs-mate": "^3.0.0",
+    "express": "~4.17.1",
     "express-https-redirect": "^1.0.0",
     "express-zip": "^3.0.0",
+    "firebase-admin": "^8.9.2",
     "formidable": "^1.2.1",
     "gulp": "^3.9.1",
-    "image-optim": "^3.0.0",
-    "imagemin": "^5.3.1",
+    "imagemin": "^7.0.1",
     "js-autocomplete": "^1.0.4",
-    "jsbarcode": "^3.8.0",
-    "jsonwebtoken": "^7.4.3",
-    "lodash": "^4.17.11",
-    "moment": "^2.19.1",
-    "morgan": "~1.7.0",
+    "jsbarcode": "^3.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "morgan": "~1.9.1",
     "mv": "^2.1.1",
     "node-dev": "^4.0.0",
     "passport": "^0.4.1",
@@ -50,9 +50,9 @@
     "phone-formatter": "0.0.2",
     "redis": "^2.8.0",
     "rescode": "^0.1.10",
-    "serve-favicon": "~2.3.0",
-    "socket.io": "^2.0.4",
-    "uniqid": "^5.0.3",
+    "serve-favicon": "~2.5.0",
+    "socket.io": "^2.3.0",
+    "uniqid": "^5.2.0",
     "voilab-pdf-table": "^0.5.0"
   },
   "devDependencies": {
