--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "mongoose": "^5.9.7",
     "morgan": "~1.9.1",
     "mv": "^2.1.1",
     "node-dev": "^4.0.0",
