Added mongoDB dev variables in environment file.

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ REDIS_PORT=6379
 REDIS_HOST=167.99.148.208
 REDIS_PASS=withrevel-9-5
 PORT=3100
+MONGO_HOST=67.207.88.169
+MONGO_DBNAME=9to5-dev
+MONGO_USERNAME=9to5-dev_app
+MONGO_PASSWORD=WwsaJcBjV6XVmuF9
