--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon ./bin/9-5-web",
     "create-default-roles": "node db-scripts/add-default-roles.js",
     "create-default-companies": "node db-scripts/add-default-companies.js",
+    "create-default-user": "node db-scripts/add-default-user.js",
+    "create-default-location": "node db-scripts/add-default-locations.js",
+    "db-seed": "npm run create-default-roles && npm run create-default-companies && npm run create-default-user && npm run create-default-location",
     "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.ejs, **/*.js,**/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify"
   },
   "dependencies": {
