--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jsbarcode": "^3.11.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "morgan": "~1.9.1",
