--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "ejs-mate": "^3.0.0",
     "express": "~4.17.1",
     "express-https-redirect": "^1.0.0",
+    "express-session": "^1.17.1",
     "express-zip": "^3.0.0",
     "firebase-admin": "^8.9.2",
     "formidable": "^1.2.1",
     "gulp": "^3.9.1",
+    "helmet": "^3.22.0",
     "imagemin": "^7.0.1",
     "js-autocomplete": "^1.0.4",
     "jsbarcode": "^3.11.0",
