--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "client-sessions": "^0.8.0",
     "compass": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.4.0",
     "crypto-js": "^3.1.9-1",
     "csvtojson": "^2.0.10",
     "currency-formatter": "^1.5.5",
