--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ REDIS_PORT=6379
 REDIS_HOST=167.99.148.208
 REDIS_PASS=withrevel-9-5
 PORT=3100
-MONGO_HOST=localhost
+MONGO_HOST=198.199.78.41
 MONGO_DBNAME=9to5_dev
 MONGO_USERNAME=9to5_dev_app
 MONGO_PASSWORD=WwsaJcBjV6XVmuF9
