--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
     "mv": "^2.1.1",
     "node-dev": "^4.0.0",
