--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MONGO_HOST=198.199.78.41
 MONGO_DBNAME=9to5_dev
 MONGO_USERNAME=9to5_dev_app
 MONGO_PASSWORD=WwsaJcBjV6XVmuF9
+NODEMAIL_BASEURL = http://localhost:5000
