--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/maps": "^1.1.0",
     "@sendgrid/mail": "^6.4.0",
     "aws-sdk": "^2.610.0",
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.1",
     "body-parser": "^1.19.0",
