--- a/.env
+++ b/.env
@@ -1,10 +1,7 @@
 NODE_ENV=development
-REDIS_PORT=6379
-REDIS_HOST=167.99.148.208
-REDIS_PASS=withrevel-9-5
 PORT=3100
-MONGO_HOST=198.199.78.41
-MONGO_DBNAME=9to5_dev
-MONGO_USERNAME=9to5_dev_app
-MONGO_PASSWORD=WwsaJcBjV6XVmuF9
+MONGO_HOST= DB_HOST
+MONGO_DBNAME= DB_NAME
+MONGO_USERNAME=DB_USERNAME
+MONGO_PASSWORD=DB_PASSWORD
 NODEMAIL_BASEURL = http://localhost:5000
