.env file-example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-NODE_ENV=production
-REDIS_PORT=##############
-REDIS_HOST=###############
-REDIS_PASS=#######
-
+NODE_ENV=development
+PORT= ####
+MONGO_HOST= #######
+MONGO_DBNAME= ######
+MONGO_USERNAME= ##########
+MONGO_PASSWORD= ##########
+NODEMAIL_BASEURL = ###########
