--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.15",
     "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.7",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
