--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
     "mv": "^2.1.1",
+    "node-cron": "^2.0.3",
     "node-dev": "^4.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
