--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mongoose": "^5.9.7",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mv": "^2.1.1",
     "node-cron": "^2.0.3",
     "node-dev": "^4.0.0",
