--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mv": "^2.1.1",
     "node-cron": "^2.0.3",
     "node-dev": "^4.0.0",
+    "office-to-pdf": "^4.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pdf-to-printer": "^1.1.2",
