--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "easy-livereload": "^1.3.2",
+    "easy-pdf-merge": "^0.2.2",
     "ejs": "^3.0.1",
     "ejs-mate": "^3.0.0",
     "express": "~4.17.1",
