--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,7 @@ services:
   paylanes-api:
     container_name: 9to5-web
     image: "${APP_IMAGE}"
-    environment:
-      - NODE_ENV
-      - MONGO_HOST
-      - MONGO_DBNAME
-      - MONGO_USERNAME
-      - MONGO_PASSWORD
-      - NODEMAIL_BASEURL
+    env_file: .env
     ports:
       - '3000:3100'
     volumes:
