added script in package.json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "remove-default-packages": "node db-scripts/remove-default-packages.js",
     "add-status-barcodes": "node db-scripts/add-status-barcodes.js",
     "add-consignee-list": "node db-scripts/add-consignee-list.js",
+    "add-awb-details":"node db-scripts/add-awb-detail.js",
+    "add-package-details": "node db-scripts/add-package-detail.js",
     "create-default-barcodes": "node db-scripts/add-default-barcodes.js",
     "db-seed": "npm run create-default-roles && npm run create-default-companies && npm run create-default-user && npm run create-default-location && npm run create-default-barcodes",
     "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.ejs, **/*.js,**/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify"
