--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "add-consignee-list": "node db-scripts/add-consignee-list.js",
     "add-awb-details":"node db-scripts/add-awb-detail.js",
     "add-package-details": "node db-scripts/add-package-detail.js",
+    "add-customer-package":"node db-scripts/add-customer-package.js",
+    "add-customer-awb":"node db-scripts/add-customer-awb.js",
+    "add-awb-carrier":"node db-scripts/add-awb-carrier.js",
+    "add-package-zone-carrier":"node db-scripts/add-package-zone-carrier.js",
     "create-default-barcodes": "node db-scripts/add-default-barcodes.js",
     "db-seed": "npm run create-default-roles && npm run create-default-companies && npm run create-default-user && npm run create-default-location && npm run create-default-barcodes",
     "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.ejs, **/*.js,**/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify"
