--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "add-status-barcodes": "node db-scripts/add-status-barcodes.js",
     "add-consignee-list": "node db-scripts/add-consignee-list.js",
     "add-awb-details":"node db-scripts/add-awb-detail.js",
+    "add-customer-package":"node db-scripts/add-customer-package.js",
+    "add-customer-awb":"node db-scripts/add-customer-awb.js",
+    "add-awb-carrier":"node db-scripts/add-awb-carrier.js",
+    "add-package-zone-carrier":"node db-scripts/add-package-zone-carrier.js",
     "add-package-details": "node db-scripts/add-package-detail.js",
     "create-default-barcodes": "node db-scripts/add-default-barcodes.js",
     "db-seed": "npm run create-default-roles && npm run create-default-companies && npm run create-default-user && npm run create-default-location && npm run create-default-barcodes",
