--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "add-status-barcodes": "node db-scripts/add-status-barcodes.js",
     "add-consignee-list": "node db-scripts/add-consignee-list.js",
     "add-awb-details":"node db-scripts/add-awb-detail.js",
+    "update-awb-details":"node db-scripts/update-awb-detail.js",
+    "update-package-details": "node db-scripts/update-package-detail.js",
     "add-customer-package":"node db-scripts/add-customer-package.js",
     "add-customer-awb":"node db-scripts/add-customer-awb.js",
     "add-awb-carrier":"node db-scripts/add-awb-carrier.js",
