--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "add-consignee-list": "node db-scripts/add-consignee-list.js",
     "add-awb-details":"node db-scripts/add-awb-detail.js",
     "add-package-details": "node db-scripts/add-package-detail.js",
+    "add-cube-package": "node db-scripts/add-cube-package.js",
     "update-awb-details":"node db-scripts/update-awb-detail.js",
     "update-package-details": "node db-scripts/update-package-detail.js",
     "add-customer-package":"node db-scripts/add-customer-package.js",
